[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Te-jé Rodgers (Raicoon GmbH)", email = "tr@raicoon.com"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest~=7.0",
    "pytest-mock~=3.7",
    "pytest-asyncio~=0.18",
    "aiohttp>=3.8.1",
]
dev = [
    "mypy>=0.931",
    "sphinx>=4.4.0",
    "pre-commit>=2.17.0",
    "pytest-cov>=3.0.0",
]
[tool.pdm.scripts]
tests = "pytest --doctest-modules"
docs-build = "sphinx-build -M html docs docs/_build"
linters = "pre-commit run --all-files"
post_install = "pre-commit install"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
strict = true
files = "reinject.py"


[tool.pytest.ini_options]
norecursedirs = "__pypackages__"
asyncio_mode = "strict"
